--- a/students.html
+++ b/students.html
@@ -130,7 +130,7 @@ http://themeforest.net/user/owwwlab/
                   <div class="col-xs-6 col-md-4">
                     <div class="vc-card boxed"><a href="#"><img src="assets/img/people/yang.jpg" alt="people"></a>
                       <div class="vc-card-wrapper"><a href="#" class="title">Yang Zhang</a>
-                        <div class="subtitle">PhD student, 2015-- <br> He deeply adapts to domains. <br>(2018--, cosupervised w/ Hassan Foroosh)</div>
+                        <div class="subtitle">PhD student, 2015-- <br> He uses simulation for real. <br>(2018--, co-supervised w/ Hassan Foroosh)</div>
                       </div>
                       <!--div class="links"><a href="#" data-toggle="tooltip" data-original-title="homepage"><i class="fa fa-external-link"></i></a><a href="#" data-toggle="tooltip" data-original-title="Biography"><i class="oli oli-user_male_circle"></i></a><a href="#" data-toggle="tooltip" data-original-title="Facebook"><i class="fa fa-facebook"></i></a><a href="#" data-toggle="tooltip" data-original-title="Twitter"><i class="fa fa-twitter"></i></a></div-->
                     </div>
@@ -138,7 +138,7 @@ http://themeforest.net/user/owwwlab/
                   <div class="col-xs-6 col-md-4">
                     <div class="vc-card boxed"><a href="#"><img src="assets/img/people/aidean.jpg" alt="people"></a>
                       <div class="vc-card-wrapper"><a href="#" class="title">Aidean Sharghi</a>
-                        <div class="subtitle">PhD student, 2015--<br> He summarizes videos.<br>(2018--, cosupervised w/ Ali Borji)</div>
+                        <div class="subtitle">PhD student, 2015--2017<br> He summarizes videos.<br></div>
                       </div>
                       <!--div class="links"><a href="#" data-toggle="tooltip" data-original-title="homepage"><i class="fa fa-external-link"></i></a><a href="#" data-toggle="tooltip" data-original-title="Biography"><i class="oli oli-user_male_circle"></i></a><a href="#" data-toggle="tooltip" data-original-title="Facebook"><i class="fa fa-facebook"></i></a><a href="#" data-toggle="tooltip" data-original-title="Twitter"><i class="fa fa-twitter"></i></a></div-->
                     </div>
@@ -170,7 +170,7 @@ http://themeforest.net/user/owwwlab/
                   <div class="col-xs-6 col-md-4">
                     <div class="vc-card boxed"><a href="#"><img src="assets/img/people/lijun.jpg" alt="people"></a>
                       <div class="vc-card-wrapper"><a href="#" class="title">Lijun Li</a>
-                        <div class="subtitle">Visiting PhD student, 2016--2017<br> He describes videos.</div>
+                        <div class="subtitle">Visiting PhD student, 2016--2017<br> He captions videos.</div>
                       </div>
                       <!--div class="links"><a href="#" data-toggle="tooltip" data-original-title="homepage"><i class="fa fa-external-link"></i></a><a href="#" data-toggle="tooltip" data-original-title="Biography"><i class="oli oli-user_male_circle"></i></a><a href="#" data-toggle="tooltip" data-original-title="Facebook"><i class="fa fa-facebook"></i></a><a href="#" data-toggle="tooltip" data-original-title="Twitter"><i class="fa fa-twitter"></i></a></div-->
                     </div>
