--- a/students.html
+++ b/students.html
@@ -98,7 +98,7 @@ http://themeforest.net/user/owwwlab/
             <div class="tb-vcenter-wrapper">
               <div class="title-wrapper vcenter">
                 <h1 class="title">Research Group</h1>
-                <h2 class="description"><b>I had a great fortune working with my (former, visiting, and remote) students.</b><br> <b>Together, we make a difference by doing research.</b></h2>
+                <h2 class="description"><b>This page features my former students while I was at UCF.</b><br></h2>
               </div>
               <div class="breadcrumb-wrapper vcenter">
                 <ul class="breadcrumb">
@@ -146,7 +146,7 @@ http://themeforest.net/user/owwwlab/
                   <div class="col-xs-6 col-md-4">
                     <div class="vc-card boxed"><a href="#"><img src="assets/img/people/yandong.jpg" alt="people"></a>
                       <div class="vc-card-wrapper"><a href="#" class="title">Yandong Li</a>
-                        <div class="subtitle">PhD student, 2017--<br> He reinforces sequential models.<br>(2018--, cosupervised w/ Liqiang Wang)</div>
+                        <div class="subtitle">PhD student, 2017--<br> He reinforces sequential models.<br>(2018--, co-supervised w/ Liqiang Wang)</div>
                       </div>
                       <!--div class="links"><a href="#" data-toggle="tooltip" data-original-title="homepage"><i class="fa fa-external-link"></i></a><a href="#" data-toggle="tooltip" data-original-title="Biography"><i class="oli oli-user_male_circle"></i></a><a href="#" data-toggle="tooltip" data-original-title="Facebook"><i class="fa fa-facebook"></i></a><a href="#" data-toggle="tooltip" data-original-title="Twitter"><i class="fa fa-twitter"></i></a></div-->
                     </div>
@@ -154,7 +154,7 @@ http://themeforest.net/user/owwwlab/
                   <div class="col-xs-6 col-md-4">
                     <div class="vc-card boxed"><a href="#"><img src="assets/img/people/jamal.jpg" alt="people"></a>
                       <div class="vc-card-wrapper"><a href="#" class="title">Muhammad Abdullah Jamal</a>
-                        <div class="subtitle">PhD student, 2016--<br> He detects faces.<br>(2018--, cosupervised w/ Guojun Qi)</div>
+                        <div class="subtitle">PhD student, 2016--<br> He detects faces.<br>(2018--, co-supervised w/ Guojun Qi)</div>
                       </div>
                       <!--div class="links"><a href="#" data-toggle="tooltip" data-original-title="homepage"><i class="fa fa-external-link"></i></a><a href="#" data-toggle="tooltip" data-original-title="Biography"><i class="oli oli-user_male_circle"></i></a><a href="#" data-toggle="tooltip" data-original-title="Facebook"><i class="fa fa-facebook"></i></a><a href="#" data-toggle="tooltip" data-original-title="Twitter"><i class="fa fa-twitter"></i></a></div-->
                     </div>
@@ -162,7 +162,7 @@ http://themeforest.net/user/owwwlab/
                   <div class="col-xs-6 col-md-4">
                     <div class="vc-card boxed"><a href="#"><img src="assets/img/people/yifan.jpg" alt="people"></a>
                       <div class="vc-card-wrapper"><a href="#" class="title">Yifan Ding</a> 
-                        <div class="subtitle">PhD student, 2015--<br>She learns with weak supervision.<br>(2018--, cosupervised w/ Liqiang Wang)</div>
+                        <div class="subtitle">PhD student, 2015--<br>She learns with weak supervision.<br>(2018--, co-supervised w/ Liqiang Wang)</div>
                       </div>
                       <!--div class="links"><a href="#" data-toggle="tooltip" data-original-title="homepage"><i class="fa fa-external-link"></i></a><a href="#" data-toggle="tooltip" data-original-title="Biography"><i class="oli oli-user_male_circle"></i></a><a href="#" data-toggle="tooltip" data-original-title="Facebook"><i class="fa fa-facebook"></i></a><a href="#" data-toggle="tooltip" data-original-title="Twitter"><i class="fa fa-twitter"></i></a></div-->
                     </div>
