--- a/students.html
+++ b/students.html
@@ -222,7 +222,7 @@ http://themeforest.net/user/owwwlab/
               <div class="container">
                 <div class="row call-out tb-vcenter-wrapper">
                   <div class="col-sm-8 vcenter">
-                    <h2 class="title">Together, we make a difference by doing research. </h2>
+                    <h2 class="title">Together, we made some differences with some exicting works. </h2>
                     <!--h4 class="sub-title">Absolutely Stunning Design &amp; Functionality Common Things Expected</h4-->
                   </div>
                   <div class="col-sm-4 vcenter text-center"><a href="publications.html" class="btn btn-medium btn-circle btn-skin-yellow btn-icon-right btn-anim-i"><i class="oli oli-forward"></i><span>read more</span></a></div>
