--- a/publications.html
+++ b/publications.html
@@ -144,6 +144,26 @@ http://themeforest.net/user/owwwlab/
                   </div>
 
                   <div class="tl-item active pub-item with-thumb"><span class="item-section">2019</span>
+                    <div class="elem-wrapper"><br><br>&nbsp;&nbsp;&nbsp;&nbsp;ICLR</div><br>
+                    <div class="content-wrapper">
+                      <h3 class="title">CAMOU: Learning Physical Vehicle Camouflages to Adversarially Attack Detectors in the Wild</h3>
+                      <div class="description">
+                        <div class="citation"><span> International Conference on Learning Representations <b>(ICLR)</b> 2019  <span class="block-elem">Y Zhang*, H Foroosh, P David, and <b>B Gong</b></span></span></div>
+                        <font color="blue">&#10236; [ <a href="https://openreview.net/pdf?id=SJgEl3A5tm">PDF</a> ] &nbsp;&nbsp;&nbsp;&nbsp;[ <a href="https://openreview.net/forum?id=SJgEl3A5tm">Openreview</a> ]</font>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="tl-item pub-item with-thumb">
+                    <div class="elem-wrapper"><br><br>&nbsp;&nbsp;&nbsp;&nbsp;ICLR</div><br>
+                    <div class="content-wrapper">
+                      <h3 class="title">DHER: Hindsight Experience Replay for Dynamic Goals</h3>
+                      <div class="description">
+                        <div class="citation"><span> International Conference on Learning Representations <b>(ICLR)</b> 2019 <span class="block-elem">M Fang, C Zhou, B Shi, <b>B Gong</b>, J Xu, and T Zhang</span></span></div>
+                        <font color="blue">&#10236; [ <a href="https://openreview.net/pdf?id=Byf5-30qFX">PDF</a> ] &nbsp;&nbsp;&nbsp;&nbsp; [ <a href="https://openreview.net/forum?id=Byf5-30qFX">Openreview</a> ] </font>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="tl-item pub-item with-thumb">
                     <div class="elem-wrapper"><br><br>&nbsp;&nbsp;&nbsp;&nbsp;AAAI</div><br>
                     <div class="content-wrapper">
                       <h3 class="title">Controllable Image-to-Video Translation: A Case Study on Facial Expression Generation</h3>
