--- a/publications.html
+++ b/publications.html
@@ -139,7 +139,7 @@ http://themeforest.net/user/owwwlab/
                       <a href="http://dblp.uni-trier.de/pers/hd/g/Gong:Boqing"><img src="assets/img/publications/series/dblp.png" alt="DBLP" class="pub-thumbnail" height="40" width="40"></a>
                       <p><br></p>
                       <h2 class="title"><u><a href="https://arxiv.org/search/?query=boqing+gong&searchtype=all&source=header">Preprints on ArXiv</a></u></h2>
-                      <h2 class="title">= indicates equal contribution among authors. * indicates students I supervised.</h2>
+                      <h2 class="title">= indicates equal contribution among authors. &nbsp;&nbsp;* indicates students I supervised.</h2>
                       <h5 class="title"></h5>
                   </div>
 
@@ -170,6 +170,16 @@ http://themeforest.net/user/owwwlab/
                       <div class="description">
                         <div class="citation"><span> The Thirty-Third AAAI Conference on Artificial Intelligence <b>(AAAI)</b> 2019 <b><font color="blue">(Oral)</font></b> <span class="block-elem">L Fan, W Huang, C Gan, J Huang, and <b>B Gong</b></span></span></div>
                         <font color="blue">&#10236; [ <a href="papers/image2video.pdf">PDF</a> ] &nbsp;&nbsp;&nbsp;&nbsp;[ <a href="https://www.dropbox.com/s/nw2nx95dg2ptvzw/suppl-aaai19.mkv?dl=0">Supplement</a> ]</font>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="tl-item pub-item with-thumb">
+                    <div class="elem-wrapper"><br><br>&nbsp;&nbsp;AISTATS</div><br>
+                    <div class="content-wrapper">
+                      <h3 class="title">A Robust Zero-Sum Game Framework for Pool-based Active Learning</h3>
+                      <div class="description">
+                        <div class="citation"><span> International Conference on Artificial Intelligence and Statistics <b>(AISTATS)</b> 2019 <span class="block-elem">D Zhu, Z Lin, X Wang, <b>B Gong</b>, and T Yang</span></span></div>
+                        <font color="blue">&#10236; [ <a href="#">PDF coming soon</a> ] &nbsp;&nbsp;&nbsp;&nbsp; [ <a href="#">Supplement</a> ] </font>
                       </div>
                     </div>
                   </div>
