--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                     <p><br></p>
 
                     
-                    <h4 class="with-sideline"><u> <a href="research.html">Slides from recent talks </a></u> </h4>
+                    <h4 class="with-sideline"><u> <a href="research.html"><font color="blue">Slides from recent talks</font> </a></u> </h4>
                       <!--ul style="list-style-type:disc">
                         <li><b>Learning and Adapting from the Web for Visual Recognitiona</b> <a href="assets/Web-DA.pdf">  <u>[PDF]</u> </a><br>
                       <i>In CVPR 2018 Workshop on <u><a href="https://www.vision.ee.ethz.ch/webvision/workshop.html">Web Vision</a></u> and ECCV 2018 Workshop on <u><a href="https://www.cefrl.org/">CEFRL</a></u></i></li>
