aistats19 paper updated

--- a/publications.html
+++ b/publications.html
@@ -179,7 +179,7 @@ http://themeforest.net/user/owwwlab/
                       <h3 class="title">A Robust Zero-Sum Game Framework for Pool-based Active Learning</h3>
                       <div class="description">
                         <div class="citation"><span> International Conference on Artificial Intelligence and Statistics <b>(AISTATS)</b> 2019 <span class="block-elem">D Zhu, Z Lin, X Wang, <b>B Gong</b>, and T Yang</span></span></div>
-                        <font color="blue">&#10236; [ <a href="#">PDF coming soon</a> ] &nbsp;&nbsp;&nbsp;&nbsp; [ <a href="#">Supplement</a> ] </font>
+                        <font color="blue">&#10236; [ <a href="papers/active.pdf">PDF</a> ] &nbsp;&nbsp;&nbsp;&nbsp; [ <a href="papers/active-supp.pdf">Supplement</a> ] </font>
                       </div>
                     </div>
                   </div>
