aistats19 paper updated

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                 <div class="row">
                   <div class="col-md-9">
                     <h3 class="with-sideline">Biography</h3>
-                    <p>Boqing Gong is a Principal Researcher in Tencent AI Lab, Seattle. His research lies at the intersection of machine learning and computer vision and has been focusing on domain adaptation, data-efficient learning (e.g., few-shot, reinforcement, and self-supervised learning), and visual analytics of objects, scenes, human activities, and their attributes. Before joining Tencent in 2018, he was a tenure-track Assistant Professor at the University of Central Florida (UCF). He received an NSF CRII award in 2016 and an NSF BIGDATA award in 2017, both of which were the first of their kinds ever granted to UCF. He is/was an area chair of IEEE ICCV 2019, ICML 2019, AISTATS 2019, WACV 2019, and WACV 2018. He received his Ph.D. in 2015 at the University of Southern California, where the Viterbi Fellowship partially supported his work.</p>
+                    <p>Boqing Gong is a Principal Researcher in Tencent AI Lab, Seattle. His research lies at the intersection of machine learning and computer vision and has been focusing on domain adaptation, data-efficient learning (e.g., few-shot, reinforcement, and self-supervised learning), and visual analytics of objects, scenes, human activities, and their attributes. Before joining Tencent in 2018, he was a tenure-track Assistant Professor at the University of Central Florida (UCF). He received an NSF CRII award in 2016 and an NSF BIGDATA award in 2017, both of which were the first of their kinds ever granted to UCF. He is/was an area chair of NeurIPS 2019, ICCV 2019, ICML 2019, AISTATS 2019, WACV 2019, and WACV 2018. He received his Ph.D. in 2015 at the University of Southern California, where the Viterbi Fellowship partially supported his work.</p>
                     <p><br></p>
 
                     
@@ -161,9 +161,9 @@
                     <h3 class="with-sideline">CV</h3><a href="CV_BGong.pdf" class="btn btn-medium btn-block btn-round btn-thick-border"><i class="oi-download-from-cloud"></i><span class="text-capitilize">Download CV</span></a>
                     <p><br></p>
                     <h3 class="with-sideline">Recent services</h3>
-                    <p>Area chair of ICCV'19, ICML'19, AISTATS'19, and WACV'18-19</p>
+                    <p>Area chair of NeurIPS'19, ICCV'19, ICML'19, AISTATS'19, and WACV'18-19</p>
                     <p></p>
-                    <p>Reviewing for NIPS, ICML, CVPR, ICCV, ECCV, ICLR, AISTATS, T-PAMI, IJCV, JMLR, etc.</p>
+                    <p>Reviewing for NSF (proposals), NeurIPS, ICML, CVPR, ICCV, ECCV, ICLR, AISTATS, T-PAMI, IJCV, JMLR, etc.</p>
                     <p></p>
                     <p>CVPR'17 Outstanding Reviewer</p>
                     
@@ -193,6 +193,8 @@
                         <li></li>
                         <li></li>
                         <li></li>
+                        <li></li>
+                        <li>2019</li>
                         <li>2018</li>
                         <li>2017</li>
                         <li>2016</li>
@@ -211,13 +213,22 @@
                         <div class="tl-item"></div>
                         <div class="tl-item"></div>
                         <div class="tl-item"></div>
+                        <div class="tl-item"></div>
+
+                        <div class="tl-item">
+                          <h5 class="title">Check my works published in 2019</h5>
+                          <div class="description"> 
+                            <a class="btn btn-small btn-round btn-icon-right btn-anim-i" href="publications.html"><i class="icon oi-forward"></i><span>read more</span></a>
+                          </div>
+                          <h5 class="title">02/2019: Area chair of NeurIPS'19, ICML'19, ICCV'19, and AISTATS'19</h5>
+                        </div>
 
                         <div class="tl-item">
                           <h5 class="title">Nine Papers Published in 2018</h5>
                           <div class="description"> 
-                            <p>
+                            <!--p>
                               on NeurIPS (1), IEEE CVPR (3), ECCV (2), ICLR (1), ACM TOMM (1), and IEEE WACV (1), respectively.
-                            </p>
+                            </p-->
                             <a class="btn btn-small btn-round btn-icon-right btn-anim-i" href="publications.html"><i class="icon oi-forward"></i><span>read more</span></a>
                           </div>
                           <h5 class="title">12/2018: Talk at IEEE BIGDATA Workshop on Big Data Transfer Learning</h5>
