--- a/publications.html
+++ b/publications.html
@@ -139,7 +139,7 @@ http://themeforest.net/user/owwwlab/
                       <a href="http://dblp.uni-trier.de/pers/hd/g/Gong:Boqing"><img src="assets/img/publications/series/dblp.png" alt="DBLP" class="pub-thumbnail" height="40" width="40"></a>
                       <p><br></p>
                       <h2 class="title"><u><a href="https://arxiv.org/search/?query=boqing+gong&searchtype=all&source=header">Preprints on ArXiv</a></u></h2>
-                      <h2 class="title">= indicates equal contribution among authors. &nbsp;&nbsp;* indicates students I supervised.</h2>
+                      <h2 class="title"><br>* students I (co-)supervised. <br>= equal contribution among authors. </h2>
                       <h5 class="title"></h5>
                   </div>
 
