--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                     <div class="content-side shadow">
                       <div class="inner-wrapper">
                         <h2 class="title">Boqing Gong</h2>
-                        <h2 class="subtitle">Principal Researcher<br>Tencent AI Lab, Seattle<span class="text-uppercase"></span></h2>
+                        <h2 class="subtitle">Research Scientist<br>Google<span class="text-uppercase"></span></h2>
                       </div>
                     </div>
                   </div>
@@ -140,7 +140,7 @@
                 <div class="row">
                   <div class="col-md-9">
                     <h3 class="with-sideline">Biography</h3>
-                    <p>Boqing Gong is a Principal Researcher in Tencent AI Lab, Seattle. His research lies at the intersection of machine learning and computer vision and has been focusing on domain adaptation, data-efficient learning (e.g., few-shot, reinforcement, and self-supervised learning), and visual analytics of objects, scenes, human activities, and their attributes. Before joining Tencent in 2018, he was a tenure-track Assistant Professor at the University of Central Florida (UCF). He received an NSF CRII award in 2016 and an NSF BIGDATA award in 2017, both of which were the first of their kinds ever granted to UCF. He is/was an area chair of NeurIPS 2019, ICCV 2019, ICML 2019, AISTATS 2019, WACV 2019, and WACV 2018. He received his Ph.D. in 2015 at the University of Southern California, where the Viterbi Fellowship partially supported his work.</p>
+                    <p>Boqing Gong is a research scientist at Google, Seattle and a principal investigator at ICSI, Berkeley. His research lies at the intersection of machine learning and computer vision and has been focusing on data- and label-efficient learning (e.g., domain adaptation, few-shot, reinforcement, webly-supervised, and self-supervised learning), and the visual analytics of objects, scenes, human activities, and their attributes. Before joining Google in 2019, he worked in Tencent and was a tenure-track Assistant Professor at the University of Central Florida (UCF). He received an NSF CRII award in 2016 and an NSF BIGDATA award in 2017, both of which were the first of their kinds ever granted to UCF. He is/was an area chair of NeurIPS 2019, ICCV 2019, ICML 2019, AISTATS 2019, WACV 2019, and WACV 2018. He received his Ph.D. in 2015 at the University of Southern California, where the Viterbi Fellowship partially supported his work.</p>
                     <p><br></p>
 
                     
