--- a/publications.html
+++ b/publications.html
@@ -210,7 +210,7 @@ http://themeforest.net/user/owwwlab/
                     <div class="content-wrapper">
                       <h3 class="title">Synthesize Policies for Transfer and Adaptation across Environments and Tasks</h3>
                       <div class="description">
-                        <div class="citation"><span> Advances in Neural Information Processing Systems <b>(NIPS)</b> 2018 <b><font color="blue">(Spotlight)</font></b><span class="block-elem">H Hu=, L Yu=, <b>B Gong</b>, and F Sha</span></span></div>
+                        <div class="citation"><span> Advances in Neural Information Processing Systems <b>(NeurIPS)</b> 2018 <b><font color="blue">(Spotlight)</font></b><span class="block-elem">H Hu=, L Yu=, <b>B Gong</b>, and F Sha</span></span></div>
                         <font color="blue">&#10236; [ <a href="papers/policy-adaptation.pdf">PDF</a> ] &nbsp;&nbsp;&nbsp;&nbsp; [ <a href="papers/suppl-policy-adaptation.pdf">Supplement</a> ] &nbsp;&nbsp;&nbsp;&nbsp; [ <a href="papers/poster-policy-adaptation.pdf">Poster</a> ]</font>
                       </div>
                     </div>
