--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                 <div class="row">
                   <div class="col-md-9">
                     <h3 class="with-sideline">Biography</h3>
-                    <p>Boqing Gong is a research scientist at Google, Seattle and a principal investigator at ICSI, Berkeley. His research lies at the intersection of machine learning and computer vision and has been focusing on data- and label-efficient learning (e.g., domain adaptation, few-shot, reinforcement, webly-supervised, and self-supervised learning), and the visual analytics of objects, scenes, human activities, and their attributes. Before joining Google in 2019, he worked in Tencent and was a tenure-track Assistant Professor at the University of Central Florida (UCF). He received an NSF CRII award in 2016 and an NSF BIGDATA award in 2017, both of which were the first of their kinds ever granted to UCF. He is/was an area chair of NeurIPS 2019, ICCV 2019, ICML 2019, AISTATS 2019, WACV 2019, and WACV 2018. He received his Ph.D. in 2015 at the University of Southern California, where the Viterbi Fellowship partially supported his work.</p>
+                    <p>Boqing Gong is a research scientist at Google, Seattle and a principal investigator at ICSI, Berkeley. His research lies at the intersection of machine learning and computer vision and has been focusing on data- and label-efficient learning (e.g., domain adaptation, few-shot, reinforcement, webly-supervised, and self-supervised learning) and the visual analytics of objects, scenes, human activities, and their attributes. Before joining Google in 2019, he worked in Tencent and was a tenure-track Assistant Professor at the University of Central Florida (UCF). He received an NSF CRII award in 2016 and an NSF BIGDATA award in 2017, both of which were the first of their kinds ever granted to UCF. He is/was an area chair of NeurIPS 2019, ICCV 2019, ICML 2019, AISTATS 2019, WACV 2019, and WACV 2018. He received his Ph.D. in 2015 at the University of Southern California, where the Viterbi Fellowship partially supported his work.</p>
                     <p><br></p>
 
                     
@@ -216,11 +216,12 @@
                         <div class="tl-item"></div>
 
                         <div class="tl-item">
-                          <h5 class="title">Check my works published in 2019</h5>
+                          <h5 class="title">Check my work published in 2019</h5>
                           <div class="description"> 
                             <a class="btn btn-small btn-round btn-icon-right btn-anim-i" href="publications.html"><i class="icon oi-forward"></i><span>read more</span></a>
                           </div>
                           <h5 class="title">02/2019: Area chair of NeurIPS'19, ICML'19, ICCV'19, and AISTATS'19</h5>
+                          <h5 class="title">2019: NSF panelist</h5>
                         </div>
 
                         <div class="tl-item">
@@ -361,7 +362,7 @@
               <div class="container">
                 <div class="row">
                   <div class="col-md-3">
-                    <h3 class="with-sideline">Educations</h3>
+                    <h3 class="with-sideline">Education</h3>
                   </div>
                   <div class="col-md-9">
                     <div class="row">
@@ -370,6 +371,14 @@
                           <div class="ib-wrap">
                             <h3 class="title">Ph.D. in Computer Science</h3><span class="subtitle">University of Southern California</span>
                             <div class="description"> <span>2011-2015</span></div>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="col-md-6">
+                        <div class="icon-box ib-edu"><i class="oli oli-diploma"></i>
+                          <div class="ib-wrap">
+                            <h3 class="title">Visiting graduate student in Computer Science</h3><span class="subtitle">University of Texas at Austin</span>
+                            <div class="description"> <span>Summer, 2012</span></div>
                           </div>
                         </div>
                       </div>
