--- a/publications.html
+++ b/publications.html
@@ -179,7 +179,7 @@ http://themeforest.net/user/owwwlab/
                       <h3 class="title">Large-Scale Long-Tailed Recognition in an Open World</h3>
                       <div class="description">
                         <div class="citation"><span> IEEE Conference on Computer Vision and Pattern Recognition <b>(CVPR)</b>, 2019 <b><font color="blue">(Oral)</font></b> <span class="block-elem">Z Liu, Z Miao, X Zhan, J Wang, <b>B Gong</b>, and S Yu</span></span></div>
-                        <font color="blue">&#10236; [ <a href="">PDF coming soon</a> ] &nbsp;&nbsp;&nbsp;&nbsp;[ <a href="">Supplement</a> ]</font>
+                        <font color="blue">&#10236; [ <a href="https://arxiv.org/abs/1904.05160">ArXiv</a> ] &nbsp;&nbsp;&nbsp;&nbsp;[ <a href="https://liuziwei7.github.io/projects/LongTail.html">Data and code</a> ]</font>
                       </div>
                     </div>
                   </div>
@@ -189,7 +189,7 @@ http://themeforest.net/user/owwwlab/
                       <h3 class="title">Not All Frames Are Equal: Weakly-Supervised Video Grounding with Contextual Similarity and Visual Clustering Losses</h3>
                       <div class="description">
                         <div class="citation"><span> IEEE Conference on Computer Vision and Pattern Recognition <b>(CVPR)</b>, 2019  <span class="block-elem">J Shi, J Xu, <b>B Gong</b>, and X Xu</span></span></div>
-                        <font color="blue">&#10236; [ <a href="">PDF coming soon</a> ] &nbsp;&nbsp;&nbsp;&nbsp;[ <a href="">Supplement</a> ]</font>
+                        <font color="blue">&#10236; [ <a href="papers/video-grounding.pdf">PDF</a> ] 
                       </div>
                     </div>
                   </div>
@@ -238,10 +238,10 @@ http://themeforest.net/user/owwwlab/
                   <div class="tl-item active pub-item with-thumb"><span class="item-section">2018</span>
                     <div class="elem-wrapper"><br><br>&nbsp;&nbsp;NeurIPS</div><br>
                     <div class="content-wrapper">
-                      <h3 class="title">Synthesize Policies for Transfer and Adaptation across Environments and Tasks</h3>
+                      <h3 class="title">Synthesized Policies for Transfer and Adaptation across Environments and Tasks</h3>
                       <div class="description">
                         <div class="citation"><span> Advances in Neural Information Processing Systems <b>(NeurIPS)</b>, 2018 <b><font color="blue">(Spotlight)</font></b><span class="block-elem">H Hu=, L Yu=, <b>B Gong</b>, and F Sha</span></span></div>
-                        <font color="blue">&#10236; [ <a href="papers/policy-adaptation.pdf">PDF</a> ] &nbsp;&nbsp;&nbsp;&nbsp; [ <a href="papers/suppl-policy-adaptation.pdf">Supplement</a> ] &nbsp;&nbsp;&nbsp;&nbsp; [ <a href="papers/poster-policy-adaptation.pdf">Poster</a> ]</font>
+                        <font color="blue">&#10236; [ <a href="papers/policy-adaptation.pdf">PDF</a> ] &nbsp;&nbsp;&nbsp;&nbsp; [ <a href="papers/suppl-policy-adaptation.pdf">Supplement</a> ] &nbsp;&nbsp;&nbsp;&nbsp; [ <a href="papers/poster-policy-adaptation.pdf">Poster</a> ] &nbsp;&nbsp;&nbsp;&nbsp; [ <a href="https://github.com/Sha-Lab/SynPo">Code</a> ]</font>
                       </div>
                     </div>
                   </div>
