--- a/index.html
+++ b/index.html
@@ -216,12 +216,14 @@
                         <div class="tl-item"></div>
 
                         <div class="tl-item">
-                          <h5 class="title">Check my work published in 2019</h5>
+                          <h5 class="title">Papers on adversarial attack, vision+language, reinforcement learning, and active learning (2019)</h5>
                           <div class="description"> 
                             <a class="btn btn-small btn-round btn-icon-right btn-anim-i" href="publications.html"><i class="icon oi-forward"></i><span>read more</span></a>
                           </div>
-                          <h5 class="title">02/2019: Area chair of NeurIPS'19, ICML'19, ICCV'19, and AISTATS'19</h5>
-                          <h5 class="title">2019: NSF panelist</h5>
+                          <h5 class="title"><a href="https://liuziwei7.github.io/projects/LongTail.html"><font color="blue">Data released</font></a> (code coming soon) for our <a href="https://arxiv.org/abs/1904.05160"><font color="blue">CVPR'19 paper</font></a> on open and long-tailed recognition (04/2019)</h5>
+                          <h5 class="title"><a href="https://github.com/Sha-Lab/SynPo"><font color="blue">Code released</font></a> for our <a href="papers/policy-adaptation.pdf"><font color="blue">NeurIPS'19 paper</font></a> on policy transfer and adaptation (04/2019)</h5>
+                          <h5 class="title">Area chair of NeurIPS'19, ICML'19, ICCV'19, and AISTATS'19 (02/2019)</h5>
+                          <h5 class="title">NSF panelist (2019)</h5>
                         </div>
 
                         <div class="tl-item">
