ICML and TPAMI papers

--- a/publications.html
+++ b/publications.html
@@ -144,6 +144,26 @@ http://themeforest.net/user/owwwlab/
                   </div>
 
                   <div class="tl-item active pub-item with-thumb"><span class="item-section">2019</span>
+                    <div class="elem-wrapper"><br><br>&nbsp;&nbsp;&nbsp;&nbsp;ICML</div><br>
+                    <div class="content-wrapper">
+                      <h3 class="title">NATTACK: Learning the Distributions of Adversarial Examples for an Improved Black-Box Attack on Deep Neural Networks</h3>
+                      <div class="description">
+                        <div class="citation"><span> International Conference on Machine Learning <b>(ICML)</b>, 2019  <span class="block-elem">Y Li*=, L Li*=, L Wang, T Zhang, and <b>B Gong</b></span></span></div>
+                        <font color="blue">&#10236; [ <a href="https://arxiv.org/pdf/1905.00441.pdf">ArXiv</a> ] &nbsp;&nbsp;&nbsp;&nbsp;[ <a href="https://github.com/Cold-Winter/Nattack">Code</a> ]</font>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="tl-item pub-item with-thumb">
+                    <div class="elem-wrapper"><br><br>&nbsp;&nbsp;&nbsp;&nbsp;TPAMI</div><br>
+                    <div class="content-wrapper">
+                      <h3 class="title">A Curriculum Domain Adaptation Approach to the Semantic Segmentation of Urban Scenes</h3>
+                      <div class="description">
+                        <div class="citation"><span> IEEE Transactions on Pattern Analysis and Machine Intelligence <b>(TPAMI)</b>, 2019  <span class="block-elem">Y Zhang*, P David, H Foroosh, and <b>B Gong</b></span></span></div>
+                        <font color="blue">&#10236; [ <a href="https://arxiv.org/pdf/1812.09953.pdf">ArXiv</a> ] &nbsp;&nbsp;&nbsp;&nbsp;[ <a href="papers/iccv17-curriculum.pdf">Conference version</a> ]&nbsp;&nbsp;&nbsp;&nbsp;[ <a href="https://github.com/YangZhang4065/AdaptationSeg">Code</a> ]</font>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="tl-item pub-item with-thumb">
                     <div class="elem-wrapper"><br><br>&nbsp;&nbsp;&nbsp;&nbsp;ICLR</div><br>
                     <div class="content-wrapper">
                       <h3 class="title">CAMOU: Learning Physical Vehicle Camouflages to Adversarially Attack Detectors in the Wild</h3>
