--- a/publications.html
+++ b/publications.html
@@ -148,7 +148,7 @@ http://themeforest.net/user/owwwlab/
                     <div class="content-wrapper">
                       <h3 class="title">NATTACK: Learning the Distributions of Adversarial Examples for an Improved Black-Box Attack on Deep Neural Networks</h3>
                       <div class="description">
-                        <div class="citation"><span> International Conference on Machine Learning <b>(ICML)</b>, 2019  <span class="block-elem">Y Li*=, L Li*=, L Wang, T Zhang, and <b>B Gong</b></span></span></div>
+                        <div class="citation"><span> International Conference on Machine Learning <b>(ICML)</b>, 2019  <b><font color="blue">(Spotlight)</font></b><span class="block-elem">Y Li*=, L Li*=, L Wang, T Zhang, and <b>B Gong</b></span></span></div>
                         <font color="blue">&#10236; [ <a href="https://arxiv.org/pdf/1905.00441.pdf">ArXiv</a> ] &nbsp;&nbsp;&nbsp;&nbsp;[ <a href="https://github.com/Cold-Winter/Nattack">Code</a> ]</font>
                       </div>
                     </div>
@@ -218,7 +218,9 @@ http://themeforest.net/user/owwwlab/
                     <div class="content-wrapper">
                       <h3 class="title">Joint Modeling of Dense and Incomplete Trajectories for Citywide Traffic Volume Inference</h3>
                       <div class="description">
-                        <div class="citation"><span> The Web Conference <b>(WWW)</b>, 2019 <span class="block-elem">X Tang, <b>B Gong,</b> Y Yu, H Yao, Y Li, H Xie, and X Wang</span></span></div>
+                        <div class="citation"><span> The Web Conference <b>(WWW)</b>, 2019 <b><font color="blue">(Oral)</font></b>
+                          <span class="block-elem">X Tang, <b>B Gong,</b> Y Yu, H Yao, Y Li, H Xie, and X Wang</span></span>
+                        </div>
                         <font color="blue">&#10236; [ <a href="papers/www.pdf">PDF</a> ]</font>
                       </div>
                     </div>
@@ -260,7 +262,7 @@ http://themeforest.net/user/owwwlab/
                     <div class="content-wrapper">
                       <h3 class="title">Synthesized Policies for Transfer and Adaptation across Environments and Tasks</h3>
                       <div class="description">
-                        <div class="citation"><span> Advances in Neural Information Processing Systems <b>(NeurIPS)</b>, 2018 <b><font color="blue">(Spotlight)</font></b><span class="block-elem">H Hu=, L Yu=, <b>B Gong</b>, and F Sha</span></span></div>
+                        <div class="citation"><span> Advances in Neural Information Processing Systems <b>(NeurIPS)</b>, 2018 <b><font color="blue">(Spotlight)</font></b><span class="block-elem">H Hu=, L Chen=, <b>B Gong</b>, and F Sha</span></span></div>
                         <font color="blue">&#10236; [ <a href="papers/policy-adaptation.pdf">PDF</a> ] &nbsp;&nbsp;&nbsp;&nbsp; [ <a href="papers/suppl-policy-adaptation.pdf">Supplement</a> ] &nbsp;&nbsp;&nbsp;&nbsp; [ <a href="papers/poster-policy-adaptation.pdf">Poster</a> ] &nbsp;&nbsp;&nbsp;&nbsp; [ <a href="https://github.com/Sha-Lab/SynPo">Code</a> ]</font>
                       </div>
                     </div>
