--- a/publications.html
+++ b/publications.html
@@ -149,7 +149,7 @@ http://themeforest.net/user/owwwlab/
                       <h3 class="title">NATTACK: Learning the Distributions of Adversarial Examples for an Improved Black-Box Attack on Deep Neural Networks</h3>
                       <div class="description">
                         <div class="citation"><span> International Conference on Machine Learning <b>(ICML)</b>, 2019  <b><font color="blue">(Spotlight)</font></b><span class="block-elem">Y Li*=, L Li*=, L Wang, T Zhang, and <b>B Gong</b></span></span></div>
-                        <font color="blue">&#10236; [ <a href="https://arxiv.org/pdf/1905.00441.pdf">ArXiv</a> ] &nbsp;&nbsp;&nbsp;&nbsp;[ <a href="https://github.com/Cold-Winter/Nattack">Code</a> ]</font>
+                        <font color="blue">&#10236; [ <a href="https://arxiv.org/pdf/1905.00441.pdf">ArXiv</a> ] &nbsp;&nbsp;&nbsp;&nbsp;[ <a href="https://github.com/Cold-Winter/Nattack">Code</a> ] &nbsp;&nbsp;&nbsp;&nbsp;[ <a href="https://docs.google.com/presentation/d/1A1xlKOMSmatW_vtxJbVyDJbPl7D0_9MQiAVDPOZ3AGs/edit?usp=sharing">Slides</a> ] </font>
                       </div>
                     </div>
                   </div>
