--- a/research.html
+++ b/research.html
@@ -124,6 +124,17 @@ http://themeforest.net/user/owwwlab/
                   <div class="col-md-8">
                     <div class="row">
                       <div class="col-md-12">
+                        <div class="pub-item with-icon">
+                          <div class="elem-wrapper"><i class="oli oli-bookmark"></i></div>
+                          <div class="content-wrapper">
+                            <h3 class="title">Gaussian Attack by Learning the Distributions of Adversarial Examples &#10230; <a href="https://docs.google.com/presentation/d/1A1xlKOMSmatW_vtxJbVyDJbPl7D0_9MQiAVDPOZ3AGs/edit?usp=sharing"> <u>[Slides]</u> </a></h3>
+                            <div class="description"> 
+                              <p>
+                                Presented at UC Davis, Waymo, and CVPR 2019 Workshop on <u><a href="http://www.gigavision.cn/index.php?c=main&a=CVPR2019">GigaVision</a></u> 
+                              </p>
+                            </div>
+                          </div>
+                        </div>
                       	<div class="pub-item with-icon">
                           <div class="elem-wrapper"><i class="oli oli-bookmark"></i></div>
                           <div class="content-wrapper">
